# pavex

libs/pavex_bp_schema/src/: lib.rs
libs/pavexc/src/compiler/: app.rs
libs/pavexc/src/compiler/analyses/: application_config.rs  constructibles.rs
libs/pavexc/src/compiler/analyses/user_components/: annotations.rs  auxiliary.rs  blueprint.rs  db.rs  mod.rs  paths.rs  router.rs
libs/pavexc/src/diagnostic/: mod.rs  registration_locations.rs
libs/pavexc_attr_parser/: Cargo.toml
libs/pavexc_cli/: Cargo.toml
libs/pavexc_cli/src/: main.rs
