[package]
name = "pavexc_attr_parser"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
syn = { workspace = true, features = ["full"] }
itertools = { workspace = true }
thiserror = { workspace = true }
darling = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
